# Thales-optronic-video-indexing

./: .env.example  .gitignore  BUILD_SUMMARY.md  COMPLETION_CHECKLIST.md  CONTEXT_PACK.md  IMPLEMENTATION_NOTES.md  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt
backend/: Dockerfile  main.py  start_combined.sh
backend/config/: settings.yaml
backend/data/input/: audio_1.m4a
backend/src/: api.py  entity_api.py
backend/src/core/: analyze_outputs.py  transcribe.py
backend/src/entity_indexing/: __init__.py  celery_app.py  config.py  dataset_exporter.py  db.py  demo.py  discovery.py  embeddings.py  models.py  normalize.py  ocr.py  open_vocab.py  processing.py  report_csv.py  report_pdf.py  schemas.py  search.py  storage.py  tasks.py  (+2 more)
components/three_hero_bg/: __init__.py  component.py  index.html
data/entity_indexing/: index.db
docs/: API.md  ARCHITECTURE.md  EXPORT_DATASET.md  TROUBLESHOOTING.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
reports/: summary_report.json  thales_metadata.csv  video_1_report.json
reports/pivot/: video_1_merged.jsonl  video_1_speech.jsonl  video_1_vision.jsonl
scripts/: check_discovery_output.py  export_training_dataset.py
tests/: test_aggregation.py  test_search.py
thales/: __init__.py  __main__.py  cli.py  config.py  discovery.py  entity_categorizer.py  entity_detector.py  entity_extractor.py  export_thales_csv.py  fusion.py  pivot.py  postprocess.py  report_generator.py  scene_analysis.py  stt_runner.py  video_processor.py  voice_parser.py
ui/: app.py  utils.py
ui/assets/: __init__.py  styles.css  theme.py
(+37 files in other folders)
